# mjsonrpc

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  README_CN.md  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__client__api.html  group__handle__management.html  group__json__rpc__errors.html  group__memory__hooks.html  group__method__management.html  group__request__processing.html  group__response__helpers.html  group__server__api.html  index.html  menudata.js  mjsonrpc_8h.html  mjsonrpc_8h_source.html  structmjrpc__func__ctx__t.html  structmjrpc__handle.html  structmjrpc__method.html  topics.html
.githooks/: pre-commit
.github/workflows/: cd.yml  ci.yml  clang-format.yml  coverage.yml  docs.yml  memcheck.yml
3rd/: CMakeLists.txt
3rd/Unity/: CMakeLists.txt
example/: CMakeLists.txt
example/arg_to_function/: CMakeLists.txt  arg_to_function.c
example/batch_invoke/: CMakeLists.txt  batch_invoke.c
example/custom_error_info/: CMakeLists.txt  custom_error_info.c
example/del_funcs/: CMakeLists.txt  del_funcs.c
example/error_cases/: CMakeLists.txt  error_cases.c
example/invoke_a_func/: CMakeLists.txt  invoke_a_func.c
example/invoke_a_function/: CMakeLists.txt  test.c
example/memory_hooks/: CMakeLists.txt  memory_hooks.c
example/notif_req/: CMakeLists.txt  notif_req.c
example/rpc_with_params/: CMakeLists.txt  rpc_with_params.c
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  groups_9.js  groups_a.js  groups_b.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  (+11 more)
src/: CMakeLists.txt  mjsonrpc.c  mjsonrpc.h  mjsonrpc.pc.in
test/: CMakeLists.txt  arry_test.c  basic_test.c  boundary_test.c  client_test.c  concurrent_test.c  err_test.c  extra_test.c  mem_test.c  obj_test.c  regression_test.c
